Phase 3.5: bound what a share is worth, and catch labels that cannot be measured
The fine tier reports occupancy and prints it as time. Three measurements now
say how far apart those are, and two checks refuse labels that could never have
produced a correct number.

The CPU duty cycle. getThreadCpuTime per registered thread, once a second, with
its resolution measured rather than assumed (15.625 ms here) and the number
withheld where the clock cannot support the window. The null test failed at 78%
where the bench cannot block, and the implementation was right: this machine
takes cores away from runnable threads for tens of milliseconds at a time. So
the second truth is the workers' own account of their preemptions, read from
gaps in the clock readings the run loop already makes. Six configurations,
agreeing to 0.76 pp at worst.

The long-instance detector. The sampler reads the slot's operation and that
thread's call counter for it; same operation with an unmoved counter means one
execution still running a tick later. Judged against what the machine did to
everything, not against the other operations — Calcite proved the latter: its
run-wide rate is 53% because most of those labels genuinely are coarse, so a
relative test could never name anything. Against the duty cycle it names the
five rules the trial spent a day finding by hand, and stays silent on the bench
in both quiet and loaded regimes.

The floor. An operation below ~50 ns is a mistake in the code rather than in the
run, identical on every machine, so under strict mode it stops the session
within a second and says which label and what to do instead. Provable even when
the sampler never catches the operation at all: zero hits in n samples bounds
its whole occupancy at three ticks, so its cost per call is under 3 x tick /
calls.

That bound caught a bug in this very work: it accused a 20 ns operation of being
under 7.9 ns. An upper bound below the truth is impossible, and the fault was
that implied duration 